examples/test/testpolicy15627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15627
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key15: value14
      key21: value2
      key31: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value12
          key38: value49
          key13: value18
      podSelector:
        matchLabels:
          key31: value34
